--- a/app/assets/stylesheets/_homepage.css.scss
+++ b/app/assets/stylesheets/_homepage.css.scss
@@ -79,3 +79,11 @@
 }
 
 #result_map img { max-width:none; }
+
+@media (max-width: 767px) {
+  .featured-collections .featured-collection {
+    margin-bottom: 20px;
+    &:last-child {margin-bottom: 0;}
+    img {max-width: 300px;}
+  }
+}
